--- a/141B/code/reading_chunks.ipynb
+++ b/141B/code/reading_chunks.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "flightit = pd.read_csv('../data/flight_edges.tsv',sep='\\t',chunksize=10000,header=None)"
+    "flightit = pd.read_csv('../data/flight_red.tsv',sep='\\t',chunksize=10000,header=None)"
    ]
   },
   {
