--- a/141B/code/Matplotlib.ipynb
+++ b/141B/code/Matplotlib.ipynb
@@ -40,6 +40,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "keep = cols[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {
     "collapsed": false
@@ -47,6 +58,30 @@
    "outputs": [],
    "source": [
     "COL = COL[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'sch_deg', u'UNITID', u'INSTNM', u'TUITIONFEE_IN', u'TUITIONFEE_OUT',\n",
+       "       u'UGDS', u'mn_earn_wne_p10', u'ADM_RATE'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keep"
    ]
   },
   {
@@ -249,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -261,6 +296,8 @@
     "for t in range(len(years)):\n",
     "    i = years[t]\n",
     "    COLtemp = pd.read_csv('../data/MERGED20'+i+'_PP.csv')\n",
+    "    COLtemp = COLtemp[keep]\n",
+    "    COLtemp.to_csv('../data/MERGED20'+i+'_PP.csv')\n",
     "    COLtemp = COLtemp[COLtemp['sch_deg'] == 3.0][['UNITID','INSTNM','TUITIONFEE_IN','TUITIONFEE_OUT']]\n",
     "    COLtemp = COLtemp.set_index('UNITID')\n",
     "    if t==0:\n",
@@ -271,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -509,7 +546,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
