--- a/141B/code/OHpres1.ipynb
+++ b/141B/code/OHpres1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -239,13 +239,13 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "OH = pd.read_csv('../data/OHvotes.csv')\n",
+    "OH = pd.read_csv('http://jsharpna.github.io/141B/data/OHvotes.csv')\n",
     "\n",
     "OH.head()"
    ]
